# cold-storage-standard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  archive-compress.sh  extract-archive.sh  pyproject.toml  python-tool-dev.md  rezip.sh  verify-and-extract.sh  verify-archive.sh  企劃書.md  修改階段計畫書.md
.github/workflows/: ci.yml
coldstore/: __init__.py  __main__.py  cli.py  logging.py
coldstore/commands/: __init__.py  extract.py  pack.py  process.py  repair.py  verify.py
coldstore/core/: __init__.py  archive.py  cleanup.py  compress.py  format_detector.py  handlers.py  hash.py  organizer.py  par2.py  progress.py  system.py  system_tools.py  win_utils.py
scripts/: README.md  pack_7z_batch.ps1  pack_7z_batch.sh
